--- a/vet/templates/vet/index_price.html
+++ b/vet/templates/vet/index_price.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Меню</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{%block title%}
+Меню
+{%endblock%}
+
+{%block content%}
 <ul>
     {% for sign in price_list %}
         <li><a href='{% url 'price-name' sign %}'>{{ sign|title }}</a></li>
     {% endfor %}
 </ul>
-</body>
-</html>
+{%endblock%}
