--- a/vet/templates/vet/info_price.html
+++ b/vet/templates/vet/info_price.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Прайс</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{%block title%}
+Прайс
+{%endblock%}
+
+{%block content%}
 <h1>Прайс услуг ветклиники для {{ service_name }}</h1>
 <h2>{{ description_data }}</h2>
-</body>
-</html>
+{%endblock%}
