--- a/vet/templates/vet/get_type.html
+++ b/vet/templates/vet/get_type.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{%load static%}
+{% block css_add %}
+    <link rel="stylesheet" href="{%static 'vet/css/get_type.css'%}">
+{% endblock %}
+
+
 {%block title%}
 Типы
 {%endblock%}
